<resources>
    <string name="app_name">SecureLife</string>
    <string name="action_add">Add Account</string>
    <string name="action_back">Back</string>
    <string name="action_cancel">Back</string>
    <string name="action_cancel_confirm_edit">Are you sure you want to leave without saving changes? All changes will be lost.</string>
    <string name="action_cancel_confirm_save">Are you sure you want to leave without saving first? All details will be lost.</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_confirm">Are you sure you want to delete this account?</string>
    <string name="action_no">No</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_sort_name">Sort By Name</string>
    <string name="action_sort_type">Sort By Type</string>
    <string name="action_yes">Yes</string>
    <string name="account_field_edittext">https://www.some-website.com</string>
    <string name="account_field_textview">This is a field:</string>
    <string name="account_field_view_helper_exception">Invalid field number passed in.</string>
    <string name="content_provider_check_columns_exception">Unknown columns in projection.</string>
    <string name="content_provider_uri_exception">Unknown URI </string>
    <string name="activity_detail_cancel_confirm_type">Leave?</string>
    <string name="activity_detail_delete_confirm_type">Delete?</string>
    <string name="activity_detail_detail_type_exception">Invalid type of view passed in.</string>
    <string name="activity_detail_toast_delete_success">Account deleted successfully!</string>
    <string name="activity_detail_toast_save_success">Account saved successfully!</string>
    <string name="activity_detail_toast_update_success">Account updated successfully!</string>
    <string name="activity_detail_type_add_title">Add Account</string>
    <string name="activity_detail_type_detail_title">Account Details</string>
    <string name="activity_detail_type_edit_title">Edit Account</string>
    <string name="activity_main_app_name">SecureLife</string>
    <string name="activity_main_button">Show Account List</string>
    <string name="activity_main_button_first_load">First Time Setup</string>
    <string name="activity_main_motto">Keeping all of your online and offline accounts\' information secure.</string>
    <string name="activity_main_toast_first_load">Time to create your first account!</string>
    <string name="activity_main_welcome_message">Welcome to</string>
    <string name="activity_search_button">Search Now!</string>
    <string name="activity_search_edittext_hint">search term here</string>
    <string name="activity_search_textview">Search Accounts:</string>
    <string name="activity_search_title">Search Accounts</string>
    <string name="activity_summary_button">Details</string>
    <string name="activity_summary_email">YourName@domain.com</string>
    <string name="activity_summary_friendly_name">Your Account Name</string>
    <string name="activity_summary_long_click_action_details">Details</string>
    <string name="activity_summary_title">Accounts Summary</string>
    <string name="activity_summary_type">Account Type</string>
    <string name="activity_summary_toast_click_action">Long press an account for more details.</string>
    <string name="activity_summary_username">YourUsername</string>
    <string name="action_show_all">Show All</string>
</resources>
