<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/add_account"
        android:icon="@drawable/ic_action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom|withText" ></item>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|withText" ></item>

    <item
        android:id="@+id/show_all"
        android:icon="@drawable/ic_action_show_all"
        android:title="@string/action_show_all"
        app:showAsAction="ifRoom|withText" ></item>

    <item
        android:id="@+id/account_list_cancel"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="always"
        android:title="@string/action_cancel" ></item>

    <item
        android:id="@+id/sort_by_name"
        android:title="@string/action_sort_name" ></item>

    <item
        android:id="@+id/sort_by_type"
        android:title="@string/action_sort_type" ></item>

</menu>