<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/account_summary_friendly_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="6dp"
            android:gravity="start"
            android:layout_weight="100"
            android:text="@string/activity_summary_friendly_name"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/account_summary_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/colorText"
            android:padding="6dp"
            android:gravity="start"
            android:text="@string/activity_summary_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/account_summary_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@color/colorPrimaryDark"
            android:padding="6dp"
            android:gravity="start"
            android:text="@string/activity_summary_email"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/account_summary_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@color/colorPrimaryDark"
            android:padding="6dp"
            android:gravity="end"
            android:text="@string/activity_summary_username"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>
