<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true" >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/activity_search_textview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/search_accounts_edittext" />

    <EditText
        android:id="@+id/search_accounts_edittext"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/activity_search_edittext_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20dp" />

    <Button
        android:id="@+id/search_accounts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/search_accounts_edittext"
        android:padding="20dp"
        android:text="@string/activity_search_button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

</RelativeLayout>

